--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "styled-theming": "^2.2.0",
     "tiny-secp256k1": "^2.2.1",
     "uuid": "^9.0.0",
+    "websocket-polyfill": "^0.0.3",
     "winston": "^3.8.2"
   },
   "devDependencies": {
